# synthlang

./: .gitignore  .npmignore  COMPILER_DEMO.md  Cargo.toml  Dockerfile  PUBLISHING_STATUS.md  PUBLISH_INSTRUCTIONS.md  README.md  REAL_WORLD_ROADMAP.md  build.rs  package.json  polythlang_cli.py  pyproject.toml  run_autonomous_enhancement.py  setup.py  simple_test.py  test_compiler.py  test_compiler.rs  test_enhancement.py  vercel.json
.github/workflows/: ci.yml  release.yml
api/: package.json
compiler/: Cargo.toml
compiler/src/: ai_primitives.rs  ast.rs  diagnostics.rs  hlir.rs  lexer.rs  lib.rs  parser.rs  semantic.rs  template.rs  token.rs  typeck.rs  types.rs
compiler/src/ai/: anthropic.rs  embeddings.rs  mod.rs  openai.rs
compiler/src/codegen/: javascript.rs  mod.rs  wasm.rs
docs/: SYNTAX.md  USER_GUIDE.md
examples/: 01_hello_ai.synth  02_tensor_autodiff.synth  03_model_pipeline.synth  04_quantum_hybrid.synth  05_probabilistic.synth  ai_features.synth  cross_domain.synth  hello_world.poly  hello_world.synth  llm_pipeline.synth  template_demo.synth
ide/: index.html
polythlang/: autonomous_enhancer.py  multi_agent_system.py
polythlang_mbc.egg-info/: PKG-INFO
src/: bias_toxicity.rs  collaboration.rs  compliance.rs  cost_dashboard.rs  cost_optimization.rs  dashboard_server.rs  dataset_versioning.rs  eval_harness.rs  fine_tuning.rs  ide_server.rs  identity.rs  main.rs  marketplace.rs  monitoring.rs  multimodal.rs  multimodal_builder.rs  pipeline.rs  security.rs
stdlib/: Cargo.toml
stdlib/src/: ai.rs  collections.rs  core.rs  crypto.rs  io.rs  json.rs  lib.rs  math.rs  net.rs  quantum.rs  random.rs  regex.rs  string.rs  time.rs
synthlang.egg-info/: PKG-INFO  SOURCES.txt
synthlang_mbc.egg-info/: PKG-INFO
test-project/: README.md  polythlang.toml
test-project/src/: main.poly
tools/vscode-extension/: language-configuration.json  package.json
tools/vscode-extension/snippets/: synth.json
tools/vscode-extension/src/: extension.ts
tools/vscode-extension/syntaxes/: synth.tmLanguage.json
