[package]
name = "synth-compiler"
version = "0.1.0"
edition = "2021"
authors = ["SYNTH Language Team <team@synthlang.org>"]
license = "Apache-2.0"
description = "SYNTH compiler - lexer, parser, semantic analysis, and code generation"

[dependencies]
# Core compiler dependencies
logos = "0.13"          # Lexer generator
lalrpop = "0.20"        # Parser generator  
lalrpop-util = "0.20"
rowan = "0.15"          # Red-green tree for CST
salsa = "0.17"          # Incremental computation
index_vec = "0.1"       # Indexed vectors for arena allocation
la-arena = "0.3"        # Arena allocator
rustc-hash = "1.1"      # Fast hash maps

# Error handling and diagnostics
codespan-reporting = "0.11"
ariadne = "0.3"
miette = { version = "5.0", features = ["fancy"] }

# MLIR integration
mlir-sys = { version = "0.2", optional = true }
inkwell = { version = "0.2", optional = true }  # LLVM wrapper

# Serialization
serde = { version = "1.0", features = ["derive"] }
bincode = "1.3"

# Async support
tokio = { version = "1.0", features = ["fs", "process"] }
futures = "0.3"

# Utilities
itertools = "0.11"
indexmap = "2.0"
smallvec = { version = "1.11", features = ["serde"] }
once_cell = "1.18"

# AI integration (optional)
reqwest = { version = "0.11", features = ["json"], optional = true }
tiktoken-rs = { version = "0.5", optional = true }
anyhow = "1.0"

# Quantum support (optional)
num-complex = { version = "0.4", optional = true }

# Zero-knowledge proofs (optional)
ark-ff = { version = "0.4", optional = true }
ark-poly = { version = "0.4", optional = true }

[build-dependencies]
lalrpop = "0.20"

[features]
default = []
ai = ["dep:reqwest", "dep:tiktoken-rs"]
quantum = ["num-complex"]
semantic = []
zkp = ["ark-ff", "ark-poly"]
wasm = []
embedded = []
mlir = ["mlir-sys"]
llvm = ["inkwell"]