[package]
name = "synth-stdlib"
version = "0.1.0"
edition = "2021"
authors = ["SYNTH Language Team <team@synthlang.org>"]
license = "Apache-2.0"
description = "SYNTH standard library - core functions and utilities"

[dependencies]
# Core utilities
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["full"] }
anyhow = "1.0"
uuid = { version = "1.0", features = ["v4"] }
thiserror = "1.0"
env_logger = "0.10"
hex = "0.4"

# Math and statistics
num-traits = "0.2"
rand = "0.8"
statrs = "0.16"

# String processing
regex = "1.0"
unicode-segmentation = "1.10"

# Crypto and hashing
sha2 = "0.10"
blake3 = "1.5"
argon2 = "0.5"

# Time and date
chrono = { version = "0.4", features = ["serde"] }
time = "0.3"

# Collections and data structures
indexmap = "2.0"
dashmap = "5.5"
petgraph = "0.6"

# AI and ML utilities (optional)
reqwest = { version = "0.11", features = ["json"], optional = true }

# Quantum computing utilities (optional)
num-complex = { version = "0.4", optional = true }

[features]
default = ["std", "crypto", "collections"]
std = []
crypto = ["dep:sha2", "dep:blake3", "dep:argon2"]
collections = ["dep:indexmap", "dep:dashmap", "dep:petgraph"]
ai = ["dep:reqwest"]
quantum = ["dep:num-complex"]
full = ["std", "crypto", "collections", "ai", "quantum"]